--- a/template_html/main.css
+++ b/template_html/main.css
@@ -947,18 +947,18 @@ input[type=number]::-webkit-outer-spin-button {
   color: #ff8300;
 }
 
-.tab-content > .tab-pane {
+.tab-content .tab-pane {
   display: none;
   padding: 38px 55px;
   padding-bottom: 45px;
 }
 
-.tab-content > .tab-pane.active {
+.tab-content .tab-pane.active {
   display: block;
 }
 
 @media (max-width: 767px) {
-  .tab-content > .tab-pane {
+  .tab-content .tab-pane {
     padding: 30px;
     padding-bottom: 45px;
   }
