--- a/views/v1_index.html
+++ b/views/v1_index.html
@@ -40,7 +40,7 @@
                         <div class="tab-pane" id="tab1"></div>
                         <div class="tab-pane" id="tab2"></div>
                         <div class="tab-pane active" id="tab3">
-                            <form method="POST" action="#">
+                            <form method="POST" action="/search">
                                 <div class="input-group">
                                     <label class="label">Votre recherche:</label>
                                     <input class="input--style-1" type="text" id="search_term" name="search_term" placeholder="Sushis" required="required" value="<%= searchTag %>">
